Fixed sweepstakes result table alignment

--- a/pachi-exchange/src/styles/DailyWinnerPagination.css
+++ b/pachi-exchange/src/styles/DailyWinnerPagination.css
@@ -110,7 +110,7 @@ body {
     min-width: 481px;
     max-width: 768px;
     background: transparent;
-    margin-left: auto;
+    margin-left: -10px;
     margin-right: auto;
   }
   .dailyDrawWinner_table {
@@ -118,7 +118,10 @@ body {
     width: 100%;
     min-width: 481px;
     max-width: 768px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 5px;
+    padding-right: 5px;
     margin-top: -50px;
   }
 
