--- a/pachi-exchange/src/styles/SweepstakesResult.css
+++ b/pachi-exchange/src/styles/SweepstakesResult.css
@@ -403,6 +403,8 @@
     min-width: 481px;
     max-width: 768px;
     height: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
     min-height: 320px;
   }
 }
